bugs: fix admin menu controller
